2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Device type, manufacturer, model, revision and serial number
	  are now obtained in device constructor.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Moved devices enums and structs out of classes.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Implemented SCSI VPDs 0x00 to 0x80.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	* Commands/DeviceInfo.cs:
	  Rename ATA/ATAPI decoders fields, methods and structs to
	  more adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	* Commands/DeviceInfo.cs:
	  Rename SCSI decoders fields, methods and structs to more
	  adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	* Commands/DeviceInfo.cs:
	  Separated SCSI decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	  Rename CD decoders fields, methods and structs to more
	  adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	  Separated CD decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Use a format-less output.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	  Added ATA/ATAPI IDENTIFY DEVICE disk tags.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* Main.cs:
	* Plugins.cs:
	* Commands/Decode.cs:
	* Commands/Verify.cs:
	* Commands/Analyze.cs:
	* Commands/Formats.cs:
	* Commands/Entropy.cs:
	* Commands/Compare.cs:
	* Commands/PrintHex.cs:
	* Commands/Checksum.cs:
	* DiscImageChef.csproj:
	* Commands/DeviceInfo.cs:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.

2015-10-17  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Added ATA/ATAPI IDENTIFY DEVICE decoder
